--- a/extension/popup/css/buttons.css
+++ b/extension/popup/css/buttons.css
@@ -125,7 +125,7 @@
 /* Download button group */
 .download-group {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 4px;
     margin-top: 4px;
 }
@@ -133,6 +133,7 @@
 /* Download button wrapper - contains both buttons */
 .download-btn-wrapper {
     display: flex;
+    flex-shrink: 0;
     height: 23px;
     border-radius: 4px;
     overflow: hidden;
