--- a/extension/popup/css/custom-dropdown.css
+++ b/extension/popup/css/custom-dropdown.css
@@ -132,7 +132,11 @@
 }
 
 .track-option:hover {
+    position: relative;
+    min-width: 100%;
+    width: fit-content;
     background: #3a3a3a;
+    box-shadow: 0 0 0 1px #1976D2;
 }
 
 .track-option.selected {
