--- a/extension/popup/css/badges.css
+++ b/extension/popup/css/badges.css
@@ -12,6 +12,7 @@
     color: white;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 1;
+    pointer-events: none;
 }
 
 .source-badge.content_script {
