new: support for simultaneous download of 2 qualities, download button now changes state to RED (partially, lol)
TODO: make full download group to change background to red, not just download-btn, add logic to stop ongoin download, add logic to recalculate progress based on all ongoing downloads for this video-item, make CSS variables to be consistent in the styles

--- a/extension/popup/css/buttons.css
+++ b/extension/popup/css/buttons.css
@@ -186,6 +186,15 @@
     background-color: #1565C0;
 }
 
+/* Download button states */
+.download-btn.downloading.stop-mode {
+    background-color: #d32f2f !important;
+}
+
+.download-btn.downloading.stop-mode:hover {
+    background-color: #b71c1c !important;
+}
+
 /* Menu button (three dots) */
 .download-menu-btn {
     display: flex;
